--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
 body {
   background-image: url("https://images.freeimages.com/images/large-previews/c0a/fire-flare-1188516.jpg");
   background-repeat: no-repeat;
